--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <script src="modules/core.js"></script>
     <script src="modules/main.js"></script>
-    <script src="modules/maintenance.js"></sc
+    <script src="modules/maintenance.js"></script>
 
     <script src="js/d3.min.js"></script>
 
